{
  "version": 4,
  "terraform_version": "1.14.9",
  "serial": 11,
  "lineage": "6e4d1fd2-5604-c1a9-e869-63bacb27ff49",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "project3_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c7217cdde317cfec",
            "arn": "arn:aws:ec2:us-east-1:127424155409:instance/i-0395dd317b5fdccc5",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0395dd317b5fdccc5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "project3-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ae276a84ba72d6b6",
            "private_dns": "ip-10-0-1-49.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.49",
            "public_dns": "ec2-3-220-169-0.compute-1.amazonaws.com",
            "public_ip": "3.220.169.0",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0718b1437a609faaf",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-074133dc2906fa787",
            "tags": {
              "Name": "project3-ec2"
            },
            "tags_all": {
              "Name": "project3-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06a831193c6319a73"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.project3",
            "aws_security_group.project3_sg",
            "aws_subnet.project3_subnet",
            "aws_vpc.project3_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "project3_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:127424155409:internet-gateway/igw-0e04ecf0bc219e973",
            "id": "igw-0e04ecf0bc219e973",
            "owner_id": "127424155409",
            "tags": {
              "Name": "project3-igw"
            },
            "tags_all": {
              "Name": "project3-igw"
            },
            "vpc_id": "vpc-0a1f1e1ff972d0dde"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.project3_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "project3_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:127424155409:route-table/rtb-0e56ad445c3894dff",
            "id": "rtb-0e56ad445c3894dff",
            "owner_id": "127424155409",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e04ecf0bc219e973",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "project3-rt"
            },
            "tags_all": {
              "Name": "project3-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a1f1e1ff972d0dde"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.project3_igw",
            "aws_vpc.project3_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "project3_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ec88498dd840423f",
            "route_table_id": "rtb-0e56ad445c3894dff",
            "subnet_id": "subnet-074133dc2906fa787"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.project3_igw",
            "aws_route_table.project3_rt",
            "aws_subnet.project3_subnet",
            "aws_vpc.project3_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "project3_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:127424155409:security-group/sg-06a831193c6319a73",
            "description": "Allow SSH, HTTP, and ArgoCD access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06a831193c6319a73",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ArgoCD",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Kubernetes NodePort range",
                "from_port": 30000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 32767
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "project3-sg",
            "name_prefix": "",
            "owner_id": "127424155409",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "project3-sg"
            },
            "tags_all": {
              "Name": "project3-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a1f1e1ff972d0dde"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.project3_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "project3_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:127424155409:subnet/subnet-074133dc2906fa787",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-074133dc2906fa787",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "127424155409",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "project3-subnet"
            },
            "tags_all": {
              "Name": "project3-subnet"
            },
            "vpc_id": "vpc-0a1f1e1ff972d0dde"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.project3_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "project3_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:127424155409:vpc/vpc-0a1f1e1ff972d0dde",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-014066df3d776b7da",
            "default_route_table_id": "rtb-039a084f6351bb20d",
            "default_security_group_id": "sg-0e352e1793e7103c9",
            "dhcp_options_id": "dopt-05d56926edd1514ea",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a1f1e1ff972d0dde",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-039a084f6351bb20d",
            "owner_id": "127424155409",
            "tags": {
              "Name": "project3-vpc"
            },
            "tags_all": {
              "Name": "project3-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}